[Add][FE] Fix error build
